--- a/html/boss.html
+++ b/html/boss.html
@@ -9,7 +9,7 @@
 
 <h1>Message service</h1>
 
-<form action="boss.php" method="POST">
+<form action="http://cs.au.dk/~amoeller/CWP/boss.php" method="POST">
 Your employee ID: #<input type="text" name="employee" size="6" maxlength="6">
 <p>
 Please write your letter to your boss here:<p>
